add env endpoint
